--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,10 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# roboflow
+export/
+data.yaml
+README.roboflow.txt
+README.dataset.txt
+
